--- a/package.json
+++ b/package.json
@@ -10,7 +10,16 @@
     "react-dom": "^16.13.1",
     "react-mdl": "^2.1.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-brands-svg-icons": "^5.9.0",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "animate.css": "^3.7.2",
+    "react-animated-css": "^1.2.1",
+    "react-card-flip": "^1.0.10",
+    "react-particles-js": "^3.2.1",
+    "react-vertical-timeline-component": "^2.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
