--- a/package.json
+++ b/package.json
@@ -3,22 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-mdl": "^2.1.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
     "@fortawesome/free-brands-svg-icons": "^5.9.0",
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
     "animate.css": "^3.7.2",
+    "react": "^16.13.1",
     "react-animated-css": "^1.2.1",
     "react-card-flip": "^1.0.10",
+    "react-dom": "^16.13.1",
+    "react-mdl": "^2.1.0",
     "react-particles-js": "^3.2.1",
+    "react-rounded-image": "^2.0.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.1",
     "react-vertical-timeline-component": "^2.6.2"
   },
   "scripts": {
