--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "animate.css": "^3.7.2",
+    "axios": "^0.19.2",
+    "cors": "^2.8.5",
+    "firebase": "^7.14.5",
+    "node-sass": "^4.14.1",
+    "nodemailer": "^6.4.6",
     "react": "^16.13.1",
     "react-animated-css": "^1.2.1",
     "react-card-flip": "^1.0.10",
