--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.19.2",
     "cors": "^2.8.5",
     "firebase": "^7.14.5",
+    "mdbreact": "^4.27.0",
     "node-sass": "^4.14.1",
     "nodemailer": "^6.4.6",
     "react": "^16.13.1",
