--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.9.0",
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "@material-ui/core": "^4.10.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -14,11 +15,14 @@
     "axios": "^0.19.2",
     "cors": "^2.8.5",
     "firebase": "^7.14.5",
+    "install": "^0.13.0",
     "mdbreact": "^4.27.0",
     "node-sass": "^4.14.1",
     "nodemailer": "^6.4.6",
+    "npm": "^6.14.5",
     "react": "^16.13.1",
     "react-animated-css": "^1.2.1",
+    "react-bootstrap": "^1.0.1",
     "react-card-flip": "^1.0.10",
     "react-dom": "^16.13.1",
     "react-mdl": "^2.1.0",
